# Xarth-Mai

./: .gitignore  AGENT.md  README.md  go.mod  main.go  release.sh  wrangler.jsonc
.agent/rules/: design.md
Aminoac/: index.html
assets/css/: onlinewebfonts.css
backend/: Cargo.toml  go.mod  main.go
backend/src/: cache.rs  github.rs  main.rs  models.rs
fightingGame/: index.html  index.js
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  api.ts  app.css  main.ts  types.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/actions/: spotlight.ts
frontend/src/lib/components/: ActivityFeed.svelte  Heatmap.svelte  ProfileCard.svelte  TechStack.svelte
handles/: router.go
lzzz.ink/: index.html
page/: index.html  style.css
page/Aminoac/: index.html  translation.js
page/assets/js/: main.js
script/: Xarth-Mai.service  release.sh
