[package]
name = "xarth-mai-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", features = ["json"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
